# dshuf

./: Cargo.toml  README.md  flake.nix
go/: go.mod  go.sum
go/cmd/dshuf/: main.go
go/dshuf/: core.go  core_test.go  drand_api.go
rust/src/: core.rs  drand_api.rs  main.rs
rust/src/tests/: mod.rs
spec/: index.md
src/: core.rs  lib.rs  main.rs  pick.rs  tests.rs
src/tests/: mod.rs
src/tests/testcases/: basic.json  basic_less.json  basic_more.json  basic_other_input.json  basic_other_randomness.json
testcases/: basic.json  basic_less.json  basic_other_input.json
