[package]
name = "dshuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drand-verify = "0.4.0"
futures = "0.3.26"
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
serde = "1.0.152"
serde_json = "1.0.93"
sha2 = "0.10.6"
surf = "2.3.2"
